--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "emoji-mart": "^3.0.0",
-    "firebase": "^7.13.2",
+    "firebase": "^7.15.5",
+    "firebase-tools": "^8.4.3",
     "md5": "^2.2.1",
     "mime-types": "^2.1.26",
     "moment": "^2.24.0",
